--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "css-loader": "^3.0.0",
+    "ramda": "^0.26.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "reason-react": ">=0.7.0",
