takeValidPoints now all numeric

--- a/exponents/package.json
+++ b/exponents/package.json
@@ -15,7 +15,8 @@
     "@types/ramda": "^0.26.15",
     "chalk": "^2.4.2",
     "mathjs": "^6.0.3",
-    "ramda": "^0.26.1"
+    "ramda": "^0.26.1",
+    "typescript": "^3.7.3"
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
