--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fastpack": ""
   },
   "dependencies": {
+    "@types/ramda": "^0.26.38",
     "bootstrap": "^4.3.1",
     "css-loader": "^3.0.0",
     "ramda": "^0.26.1",
